<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bot_bringup</name>
  <version>0.0.1</version>
  <description>ros2bot bringup launch package</description>
  <maintainer email="abcampbellb@gmail.com">abcampbellb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2bot_base</depend>
  <depend>ros2bot_drivers</depend>
  <depend>robot_localization</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
