<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bot_camera</name>
  <version>0.0.1</version>
  <description>ZED2i depth camera nodes</description>
  <maintainer email="acampbellb@gmail.com">abcampbellb</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
