<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bot_camera</name>
  <version>0.0.1</version>
  <description>ZED2i depth camera nodes</description>
  <maintainer email="acampbellb@gmail.com">abcampbellb</maintainer>
  <license>MIT</license>

  <depend>zed_ros2_wrapper</depend>
  <depend>launch_ros</depend>
  <depend>zed_wrapper</depend>
	<depend>zed_interfaces</depend>
	<depend>zed_components</depend>
	<depend>grid_map_rviz_plugin</depend>
  <depend>robot_state_publisher</depend>  
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>zed_ros2_interfaces</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
