<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bot_controls</name>
  <version>0.0.1</version>
  <description>ros2bot robot controllers</description>
  <maintainer email="abcampbellb@gmail.com">ubuntu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
