<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bot_imu_calib</name>
  <version>0.0.1</version>
  <description>Tools for computing and applying calibration parameters to IMU measurements</description>
  <maintainer email="acampbellb@gmail.com">abcampbellb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
