<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bot_urdf</name>
  <version>0.0.1</version>
  <description>
    3D models of the ros2bot for simulation and visualization
  </description>
  <maintainer email="abcampbellb@gmail.com">ubuntu</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
